HTML logo icon change, add toggleBtn

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/607d7d5711.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   <title>Navigation Bar</title>
 </head>
 <body>
   <nav class="navbar">
     <div class="navbar-logo">
-      <i class="fa-solid fa-icons"></i>
+      <i class="fa-sharp fa-solid fa-heart"></i>
       <a href="/">SorinWorld</a>
     </div>
     <ul class="navbar-menu">
@@ -25,6 +27,9 @@
       <li><a href="/"><i class="fa-brands fa-instagram"></i></a></li>
       <li><a href="/"><i class="fa-brands fa-twitter"></i></a></li>
     </ul>
+    <a href="#" class="navbar-toggleBtn">
+      <i class="fa-solid fa-bars"></i>
+    </a>
   </nav>
 </body>
 </html>
