--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <li><a href="/">Bookings</a></li>
     </ul>
     <ul class="navbar-icon">
-      <li><a href="/"><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href="/"><i class="fa-brands fa-twitter"></i></a></li>
+      <li><a href="https://www.instagram.com/sorinworld_/"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
     </ul>
     <a href="#" class="navbar-toggleBtn">
       <i class="fa-solid fa-bars"></i>
